--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a href="index.html" class="header__logo">
             <img src="./img/logo.svg" alt="logo" />
           </a>
-          <nav class="header__menu menu-header">
+          <nav class="menu-header">
             <ul class="menu-header__list">
               <li class="menu-header__item">
                 <a href="#">💬 TG</a>
