add product page

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <h1 class="collection__title">Коллекция. {октябрь:2023}</h1>
             <div class="collection__body">
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker1.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     Nike Air Max Plus
                   </a>
                   <p class="item-collection__text">
