add links for card

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker2.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     Jordan 1 Retro High OG SP
                   </a>
                   <p class="item-collection__text">
@@ -66,22 +66,22 @@
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker3.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     adidas Campus 00s
                   </a>
                   <p class="item-collection__text">Core Black</p>
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker4.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     Converse Chuck Taylor All Star 70 Hi
                   </a>
                   <p class="item-collection__text">
@@ -90,42 +90,44 @@
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker5.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     UGG Classic Ultra Mini Boot
                   </a>
                   <p class="item-collection__text">Chestnut (Women's)</p>
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker6.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     New Balance 574 YURT
                   </a>
                   <p class="item-collection__text">Salehe Bembury Shark Skin</p>
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker7.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">Nike Dunk Low SP</a>
+                  <a href="product.html" class="item-collection__name">
+                    Nike Dunk Low SP
+                  </a>
                   <p class="item-collection__text">Syracuse (2020/2022)</p>
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker8.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     Jordan 1 Retro Low Golf
                   </a>
                   <p class="item-collection__text">
@@ -134,11 +136,11 @@
                 </div>
               </div>
               <div class="collection__item item-collection">
-                <a href="#" class="item-collection__image">
+                <a href="product.html" class="item-collection__image">
                   <img src="./img/sneaker9.jpg" alt="sneaker" />
                 </a>
                 <div class="item-collection__body">
-                  <a href="#" class="item-collection__name">
+                  <a href="product.html" class="item-collection__name">
                     adidas Yeezy Foam RNNR
                   </a>
                   <p class="item-collection__text">Stone Sage</p>
