--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 </div>
             </header>
             <main class="main">
-                <section class="main__collection collection">
+                <section class="collection">
                     <div class="collection__container">
                         <h1 class="collection__title">
                             Коллекция. {октябрь:2023}
                         </h1>
                         <div class="collection__body">
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a
                                     href="products/product1.html"
                                     class="item-collection__image"
@@ -63,7 +63,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a
                                     href="products/product2.html"
                                     class="item-collection__image"
@@ -85,7 +85,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a
                                     href="products/product3.html"
                                     class="item-collection__image"
@@ -107,7 +107,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a href="#" class="item-collection__image">
                                     <img
                                         src="./img/sneaker4.jpg"
@@ -123,7 +123,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a href="#" class="item-collection__image">
                                     <img
                                         src="./img/sneaker5.jpg"
@@ -139,7 +139,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a href="#" class="item-collection__image">
                                     <img
                                         src="./img/sneaker6.jpg"
@@ -156,7 +156,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a href="#" class="item-collection__image">
                                     <img
                                         src="./img/sneaker7.jpg"
@@ -172,7 +172,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a href="#" class="item-collection__image">
                                     <img
                                         src="./img/sneaker8.jpg"
@@ -188,7 +188,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="collection__item item-collection">
+                            <div class="item-collection">
                                 <a href="#" class="item-collection__image">
                                     <img
                                         src="./img/sneaker9.jpg"
@@ -214,7 +214,7 @@
                         <a href="index.html" class="footer__logo">
                             <img src="./img/logo-footer.svg" alt="logo" />
                         </a>
-                        <nav class="footer__menu menu-footer">
+                        <nav class="menu-footer">
                             <ul class="menu-footer__list">
                                 <li class="menu-footer__item">
                                     <a href="#">💬 TG</a>
