--- a/products/product1.html
+++ b/products/product1.html
@@ -125,7 +125,7 @@
                         <a href="../index.html" class="footer__logo">
                             <img src="../img/logo-footer.svg" alt="logo" />
                         </a>
-                        <nav class="footer__menu menu-footer">
+                        <nav class="menu-footer">
                             <ul class="menu-footer__list">
                                 <li class="menu-footer__item">
                                     <a href="#">💬 TG</a>
