--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="collection__body">
                             <div class="item-collection">
                                 <a
-                                    href="products/product1.html"
+                                    href="products/new-balance-574.html"
                                     class="item-collection__image"
                                 >
                                     <img
@@ -53,7 +53,7 @@
                                 </a>
                                 <div class="item-collection__body">
                                     <a
-                                        href="products/product1.html"
+                                        href="products/new-balance-574.html"
                                         class="item-collection__name"
                                     >
                                         New Balance C-ms574
@@ -65,7 +65,7 @@
                             </div>
                             <div class="item-collection">
                                 <a
-                                    href="products/product2.html"
+                                    href="products/nike-dunk-low.html"
                                     class="item-collection__image"
                                 >
                                     <img
@@ -75,7 +75,7 @@
                                 </a>
                                 <div class="item-collection__body">
                                     <a
-                                        href="products/product2.html"
+                                        href="products/nike-dunk-low.html"
                                         class="item-collection__name"
                                     >
                                         Nike Dunk Low SP
@@ -87,7 +87,7 @@
                             </div>
                             <div class="item-collection">
                                 <a
-                                    href="products/product3.html"
+                                    href="products/converse-chuck-70.html"
                                     class="item-collection__image"
                                 >
                                     <img
@@ -97,7 +97,7 @@
                                 </a>
                                 <div class="item-collection__body">
                                     <a
-                                        href="products/product3.html"
+                                        href="products/converse-chuck-70.html"
                                         class="item-collection__name"
                                     >
                                         Converse Chuck 70 High
